--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/">Главная</a>
       </li>
       <li
-        routerLinkActive="active"
+        <!--routerLinkActive="active"-->
       >
         <a [routerLink]="'/cars'">Машины</a>
       </li>
